--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,10 @@
     ]
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.4",
     "@redwoodjs/forms": "2.2.4",
     "@redwoodjs/router": "2.2.4",
     "@redwoodjs/web": "2.2.4",
